Adding new line in branch-1

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 
-<h1 style="color:blue;">A Blue Heading</h1>
+<h1 style="color:blue;">This is Local Repo</h1>
 
-<p style="color:red;">A red paragraph.</p>
+<p style="color:red;">This Is branch-1</p>
 
 </body>
 </html>
