Adding new line in branch-2

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <h1 style="color:blue;">A Blue Heading</h1>
 
-<p style="color:red;">A red paragraph.</p>
+<p style="color:red;">This is branch-2</p>
 
 </body>
 </html>
