Adding new line in branch-2

--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <body>
 
 <h1 style="color:blue;">This is Local Repo</h1>
+<h1 style="color:blue;">A Blue Heading</h1>
 
 <p style="color:red;">This Is branch-1</p>
+<p style="color:red;">This is branch-2</p>
 
 </body>
 </html>
